--- a/.devcontainer/vsmoddb.conf
+++ b/.devcontainer/vsmoddb.conf
@@ -34,10 +34,10 @@ ServerName ababu
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
-	ErrorLog ${APACHE_LOG_DIR}/error.log
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
-	# ErrorLog /var/log/apache2/error.log
-	# CustomLog /var/log/apache2/access.log combined
+	# ErrorLog ${APACHE_LOG_DIR}/error.log
+	# CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog /var/log/apache2/error.log
+	CustomLog /var/log/apache2/access.log combined
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
