feat: invite / join a clinic full working

--- a/docker/8.3/php.ini
+++ b/docker/8.3/php.ini
@@ -9,7 +9,7 @@ zend_extension = xdebug.so
 xdebug.mode = debug
 xdebug.start_with_request = yes
 xdebug.discover_client_host = true
-xdebug.idekey = VSC
+xdebug.idekey = VSCODE
 xdebug.client_host = host.docker.internal
 xdebug.client_port = 9003
 
