--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.3.2",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^0.7.8",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
-        "vite": "^4.4.9"
+        "vite": "^4.4.9",
+        "toastr": "^2.1.4"
     },
     "dependencies": {
-        "jquery": "^3.7.1"
+        "toastr": "^2.1.4"
     }
 }
