--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
+        "select2": "^4.1.0-rc.0",
         "toastr": "^2.1.4",
         "vite": "^4.4.9"
     },
