--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.3.2",
+        "bootstrap-icons": "^1.11.3",
         "jquery": "^3.7.1",
         "laravel-vite-plugin": "^0.7.8",
         "lodash": "^4.17.19",
