--- a/docker/8.2/php.ini
+++ b/docker/8.2/php.ini
@@ -2,3 +2,12 @@
 post_max_size = 100M
 upload_max_filesize = 100M
 variables_order = EGPCS
+
+[XDebug]
+zend_extension = xdebug.so
+xdebug.mode = debug
+xdebug.start_with_request = yes
+xdebug.discover_client_host = true
+xdebug.idekey = VSCODE
+xdebug.client_host = host.docker.internal
+xdebug.client_port = 9003
